<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/grey_fabric_bg"
    >

    <TextView
        android:id="@+id/textViewHeaderPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BILTEORILOGO"
        android:textColor="#FFFFFFFF"
        android:paddingBottom="35dp" />
    
    <Button
        android:id="@+id/btn_exam_one"
        style="@style/buttonWidth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_exam_one" />

    <Button
        android:id="@+id/btn_stats"
        style="@style/buttonWidth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/statistics" />
    <Button
        android:id="@+id/btn_book"
        style="@style/buttonWidth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_book" />

    <Button
        android:id="@+id/btn_setting"
        style="@style/buttonWidth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_settings" />

    <Button
        android:id="@+id/btn_map"
        style="@style/buttonWidth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
         android:text="@string/btn_get_directions" />

      <Button
          android:id="@+id/btn_takePicture"
          style="@style/buttonWidth"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:text="@string/btn_take_picture" />

</LinearLayout>

